// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signals SpamTrapsPreview Component renders correctly 1`] = `
<PageLink
  to="/signals/spam-traps/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Spam Trap Monitoring"
        tooltipContent="
  The share over time of your total email that has been sent to known spam traps. An
  excessive rate of spam trap hits is an indicator of poor list procurement and hygiene practices.
"
      />
    </Panel.Section>
    <Panel.Section>
      <BarChart
        activeFill="#22838A"
        disableHover={true}
        fill="#B3ECEF"
        gap={0.5}
        height={170}
        isLink={true}
        margin={
          Object {
            "bottom": 12,
            "left": 12,
            "right": 0,
            "top": 12,
          }
        }
        shouldHighlightSelected={true}
        timeSeries={
          Array [
            1,
            2,
            3,
          ]
        }
        width="99%"
        xAxisProps={
          Object {
            "hide": true,
          }
        }
        xAxisRefLines={Array []}
        xKey="date"
        yAxisProps={
          Object {
            "domain": Array [
              0,
              1,
            ],
            "tickFormatter": [Function],
          }
        }
        yAxisRefLines={Array []}
        yKey="value"
        yKeys={
          Array [
            Object {
              "fill": "#1A838B",
              "key": "relative_trap_hits_typo",
            },
            Object {
              "fill": "#29B9C7",
              "key": "relative_trap_hits_recycled",
            },
            Object {
              "fill": "#50CFDA",
              "key": "relative_trap_hits_parked",
            },
          ]
        }
        yRange={
          Array [
            "auto",
            "auto",
          ]
        }
      />
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals SpamTrapsPreview Component renders empty correctly 1`] = `
<PageLink
  to="/signals/spam-traps/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Spam Trap Monitoring"
        tooltipContent="
  The share over time of your total email that has been sent to known spam traps. An
  excessive rate of spam trap hits is an indicator of poor list procurement and hygiene practices.
"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        height="170px"
        title="No Data Available"
      >
        Insufficient data to populate this chart
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals SpamTrapsPreview Component renders error correctly 1`] = `
<PageLink
  to="/signals/spam-traps/ip-pool/best-pool?subaccount=101"
>
  <Panel>
    <Panel.Section>
      <ChartHeader
        hideLine={true}
        title="Spam Trap Monitoring"
        tooltipContent="
  The share over time of your total email that has been sent to known spam traps. An
  excessive rate of spam trap hits is an indicator of poor list procurement and hygiene practices.
"
      />
    </Panel.Section>
    <Panel.Section>
      <Callout
        height="170px"
        title="Unable to Load Data"
      >
        error message
      </Callout>
    </Panel.Section>
  </Panel>
</PageLink>
`;

exports[`Signals SpamTrapsPreview Component renders loading correctly 1`] = `
<PanelLoading
  minHeight="170px"
/>
`;
